# papyruscs

./: .gitignore  Mcpe.sln  Mcpe.sln.DotSettings  Papyrus.sln  license.md  readme.md
.github/workflows/: publish.yml
Benchmark/: Benchmark.csproj  Program.cs
ConsoleTester/: ConsoleTester.csproj  Program.cs  packages.config
ConsoleTester/Properties/: AssemblyInfo.cs
Imazen.WebP-std/: Imazen.WebP-std.csproj  SimpleDecoder.cs  SimpleEncoder.cs
Imports/ImageFormats-std/: ImageFormats-std.deps.json
Imports/Imazen.WebP-std/: Imazen.WebP-std.deps.json
MapLoader.NUnitTests/: BenchmarkTests.cs  MapLoader.NUnitTests.csproj  MapLoader.Tests.csproj  OtherTests.cs  textures
MapLoader.Tests/: MapLoader.Tests.csproj  UnitTest1.cs
Maploader/: Maploader - Backup.csproj  Maploader.csproj  libwebp.so.6
Maploader.Tests/: Maploader.Tests.csproj  packages.config
Maploader.Tests/Properties/: AssemblyInfo.cs
Maploader.Tests/Source/: LookupTableTests.cs  WorldTests.cs
Maploader.Tests/Tests/: LookupTableTests.cs  WorldTests.cs
Maploader/Core/: BetterEnumerable.cs  ChunkPool.cs  NotParallel.cs  Single.cs
Maploader/Extensions/: ByteArrayExtensions.cs  GraphicsExtensions.cs  IntExtensions.cs
Maploader/LookupTable/: runtimeid_table.json
Maploader/Renderer/: ChunkRenderer.cs  RenderMode.cs  RenderSettings.cs
Maploader/Source/: BlockData.cs  Chunk.cs  Coordinate.cs  PersistancePalette.cs  World.cs
Maploader/World/: BlockData.cs  Chunk.cs  ChunkData.cs  ChunkKeyStack.cs  CoordHelpers.cs  Coordinate.cs  Coordinate2D.cs  GroupedChunkSubKeys.cs  LevelDbWorldKey.cs  LevelDbWorldKey2.cs  LevelDbWorldKey3.cs  PersistancePalette.cs  SubChunkData.cs  World.cs
Mcpe/: App.config  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Mcpe.csproj  MyContext.cs  Viewer.csproj  packages.config
Mcpe/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
PapyrusAlgorithms/: PapyrusAlgorithms.csproj
PapyrusAlgorithms/Data/: KeyAndCrc.cs
PapyrusAlgorithms/Database/: Checksum.cs  DbContextExtensions.cs  DbCreator.cs  PapyrusContext.cs  Settings.cs
PapyrusAlgorithms/Migrations/: 20190522130109_Initial.Designer.cs  20190522130109_Initial.cs  20190610115634_Settings.Designer.cs  20190610115634_Settings.cs  20190610122949_Settings2.Designer.cs  20190610122949_Settings2.cs  20190610125337_Settings3.Designer.cs  20190610125337_Settings3.cs  20190610131213_Settings4.Designer.cs  20190610131213_Settings4.cs  20190620000000_Profile.Designer.cs  20190620000000_Profile.cs  20190801161220_chunksperdimension.Designer.cs  20190801161220_chunksperdimension.cs  PapyrusContextModelSnapshot.cs
PapyrusAlgorithms/Strategies/: ChunksRenderedEventArgs.cs  IRenderStrategy.cs  ImageInfo.cs  RendererCombi.cs  Strategy.cs  ZoomRenderedEventArgs.cs
PapyrusCs/: BetterEnumerable.cs  ByteArray.cs  GlobalConfig.cs  Options.cs  PapyrusCs.csproj  Program.Interactive.cs  Program.Test.cs  Program.Villages.cs  Program.cs  Single.cs  Strategy.cs  TestCommands.cs  map.html  map.leaflet.thtml  map.thtml
PapyrusCs.Tests/: Class1.cs  PapyrusCs.Tests.csproj  UnitTest1.cs
PapyrusCs.Tests.Core/: DbContextExtensions.cs  PapyrusCs.Tests.Core.csproj  PapyrusCs.Tests.csproj  UnitTest1.cs
PapyrusCs.Tests/Properties/: AssemblyInfo.cs
PapyrusCs/Database/: Checksum.cs  Creator.cs  DbContextExtensions.cs  DbCreator.cs  LevelDbWorldKey2.cs  PapyrusContext.cs  Settings.cs
PapyrusCs/Migrations/: 20190515134052_Initial.Designer.cs  20190515134052_Initial.cs  (+12 more)
leveldb-sharp-1.9.2/: AssemblyInfo.cs  AssemblyVersion.cs  AssemblyVersion.cs.in  DB.cs  Iterator.cs  LICENSE  Makefile.am  Makefile.in  Native.cs  Options.cs  README.md  ReadOptions.cs  WriteBatch.cs  WriteOptions.cs  aclocal.m4  configure  configure.ac  leveldb-sharp.csproj  leveldb-sharp.dll.config  leveldb-sharp.pc.in  leveldb-sharp.snk
leveldb-sharp-1.9.2/m4/: mono.m4  programs.m4
leveldb-sharp-std/: Cache.cs  CompressionType.cs  DB.cs  Iterator.cs  Native.cs  Options.cs  ReadOptions.cs  Snapshot.cs  WriteBatch.cs  WriteOptions.cs  leveldb-sharp-std.csproj  license.md
textures/: terrain_texture.json
(+194 files in other folders)
